Fixed select element on safari

--- a/src/style.css
+++ b/src/style.css
@@ -295,6 +295,7 @@ body {
 }
 
 .todo-project {
+    -webkit-appearance: none;
     border: 0;
     font-family: inherit;
     font-size: inherit;
